19990612-11:22 CET Patrick Mast
  * Release of Build #26
  * version.h, updated build version
  + Included WhatsNew.txt

19990612-08:30 CET Jose Lalin / Eddie Runia
   * tests/working/testcgi.prg
     New version uploaded.
     ER : Changed HB_File -> File and Functions.cfm -> Function.cfm
   + tests/working/list.txt, function.cfm
     Referenced files added

19990612-08:00 CET Eddie Runia
   * tests/working/debugtst.prg, tests/working/clasinit.prg,
   * tests/working/funcarr.prg, tests/working/objarr.prg,
   * tests/working/objasign.prg
     Reference to HBDebug() renamed to Debug()
   * tests/working/run_exp.h, tests/working/runner.c
     all reference now correct
   * source/tools/debug.c
     HB_Static -> HB___Static
   * source/tools/stringp.prg
     HBDebug() renamed to Debug()


Fri Jun 11 1999 19:35 PST Ron Pinkas
   * source/compiler/harbour.y
        Moved code to check non used declared variable from GenReturn() to FunDef()
        Since Clipper function may have multiple RETURN statements

Fri Jun 11 19:14:22 1999  Gonzalo A. Diethelm  <Gonzalo.Diethelm@jda.cl>

	* include/Makefile:
	* include/set.h:
	* source/compiler/harbour.y:
	* source/hbpp/harb.h:
	* source/hbpp/hbpp.c:
	* source/rtl/arrays.c:
	* source/rtl/classes.c:
	* source/rtl/console.c:
	* source/rtl/dates.c:
	* source/rtl/descend.c:
	* source/rtl/dir.c:
	* source/rtl/environ.c:
	* source/rtl/files.c:
	* source/rtl/hardcr.c:
	* source/rtl/math.c:
	* source/rtl/mtran.c:
	* source/rtl/set.c:
	* source/rtl/strings.c:
	* source/rtl/transfrm.c:
	* source/runner/run_exp.h:
	* source/runner/runner.c:
	* source/tools/asciisum.c:
	* source/tools/ascpos.c:
	* source/tools/atdiff.c:
	* source/tools/chareven.c:
	* source/tools/charmix.c:
	* source/tools/charodd.c:
	* source/tools/chrcount.c:
	* source/tools/chrfirst.c:
	* source/tools/chrtotal.c:
	* source/tools/datesx.c:
	* source/tools/debug.c:
	* source/tools/hb_f.c:
	* source/tools/io.c:
	* source/tools/mathx.c:
	* source/tools/strcount.c: